--- a/templates/task.html
+++ b/templates/task.html
@@ -43,8 +43,9 @@
         auf der Seite des jeweiligen Produkts drücken. Du hast jeweils 1 Minute Zeit, um deine Entscheidung zu treffen.
         Nach 30 und 15 Sekunden ertönt ein Ton. Triffst du in dieser Zeit keine Entscheidung, erscheint automatisch eine
         Übersicht mit allen Produkten. Triffst du deine Entscheidung erst in der Übersicht wird sie als ungültig gewertet.
-        Danach erscheint ein Fenster, in dem du die nächste Entscheidung starten kannst. Jeweils nach 10-15 Minuten
-        werden wir eine kurze Pause einlegen.
+        Danach erscheint ein Fenster, in dem du die nächste Entscheidung starten kannst. Bevor die nächsten Produkte
+        angezeigt werden erscheint ein Punkt in der Mitte des Bildschirms. Richte deinen Blick darauf, bis die Produkte
+        erscheinen. Jeweils nach 10-15 Minuten werden wir eine kurze Pause einlegen.
     </article>
     <button class = "startButton" id="start" type="button">Zur Beschreibung</button> <br>
 </div>
