changed description and task

--- a/templates/description.html
+++ b/templates/description.html
@@ -38,7 +38,8 @@
         Die Freundin, für die du einkaufen sollst, ist eine 22-jährige Studentin. Sie ernährt sich vegan und versucht
         stets Bio-Produkte zu kaufen. Außerdem achtet sie darauf, dass die Produkte, die sie kauft, wenn möglich recyclebar
         verpackt sind. Stehen ihr mehrere Produkte zur Verfügung, die diesen Anforderungen entsprechen, so wählt sie das
-        Produkt mit dem besten Preisverhältnis, da sie als Studentin ihr Geld optimal nutzen will.
+        Produkt mit dem besten Preisverhältnis, da sie als Studentin ihr Geld optimal nutzen will. <br>
+        Bitte teile der Aufsichtsperson die Kriterien zur Entscheidungsfindung in deinen eigenen Worten mit, bevor du fortfährst.
     </article>
     <button class = "startButton" id="next" type="button">Weiter</button> <br>
 </div>
